--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,15 @@
             android:exported="false"
             tools:ignore="ForegroundServicePermission" />
 
+        <service
+            android:name=".presentation.util.base.MessageReceiverService"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.google.android.gms.wearable.BIND_LISTENER"
+                    tools:ignore="WearableBindListener" />
+            </intent-filter>
+        </service>
+
     </application>
 
 </manifest>
